--- a/pom.xml
+++ b/pom.xml
@@ -93,9 +93,8 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.30</version>
-            <scope>provided</scope>
+            <optional>true</optional>
         </dependency>
-
         <!--        Spring Boot Mail-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
