Add DTOs for game state management and card handling

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=UnoApplication
 server.port=8080
+logging.level.org.springframework.web.socket=DEBUG
 
 # DB Configuration
 spring.datasource.url=jdbc:mariadb://144.122.171.84:3306/group3
@@ -11,6 +12,7 @@ spring.output.ansi.enabled=always
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+
 
 # Connection pool settings
 spring.datasource.hikari.maximum-pool-size=5
