--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,6 @@
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.2.2</version>  <!-- Use a stable version -->
     </parent>
-
     <groupId>com.uno</groupId>
     <artifactId>CENG453_20242_Group3_backend</artifactId>
     <version>0.0.1-SNAPSHOT</version>
@@ -32,12 +31,34 @@
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+           <dependency>
+       <groupId>org.springframework.boot</groupId>
+       <artifactId>spring-boot-starter-websocket</artifactId>
+   </dependency>
+   <dependency>
+       <groupId>org.webjars</groupId>
+       <artifactId>sockjs-client</artifactId>
+       <version>1.5.1</version>
+   </dependency>
+   <dependency>
+       <groupId>org.webjars</groupId>
+       <artifactId>stomp-websocket</artifactId>
+       <version>2.3.4</version>
+   </dependency>
+
+
+
         <!--        JWT-->
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
