Add game lobby retrieval and related repository functionality

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,8 @@ spring.output.ansi.enabled=always
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
-
+spring.jackson.serialization.fail-on-empty-beans=false
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 # Connection pool settings
 spring.datasource.hikari.maximum-pool-size=5
 spring.datasource.hikari.minimum-idle=2
